# Text-to-SQL

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: database.py  logger.py  main.py  test_db.py
app/dataset/: benchmark_results.json  ground_truth_queries.py  query_decompositions.py
app/prompts/: decomposition_prompt.txt  retry_prompt.txt  sql_generation_prompt.txt  summary_prompt.txt
app/routers/: agent_router.py
app/services/: decomposer.py  executor.py  retry_engine.py  sql_generator.py  summarizer.py  validator.py
docs/: api.md  architecture.md  setup.md  troubleshooting.md
reports/: final_report.md  task1_evaluation_framework.md  task1_report.md  task2_report.md  task3_report.md  task4_report.md
scripts/: verify_setup.py
