[project]
name = "text-to-sql"
version = "0.1.0"
description = "AI-powered Text-to-SQL API using FastAPI and PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=2.4.0",
    "markdown-pdf>=1.13.1",
    "openai>=2.37.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
